--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- SEO -->
+    <meta name="keywords" content="motos,concesionaria,ventas">
+    <meta name="description" content="Página de venta de motos">
+    <title>Concesionaria Reniero Proyecto Coder</title>
 </head>
 <body>
     <header class="complete__header">
